# rust-books

hello/: Cargo.toml  Makefile
hello/src/: main.rs
mandelbrot/: Cargo.toml  Makefile
mandelbrot/src/: lib.rs  logic.rs
mandelbrot/www/: index.html  index.js
new_crate/: Cargo.toml  Makefile
new_crate/src/: lib.rs  main.rs  module_a.rs
numberplace/: Cargo.toml  LICENSE_MIT
numberplace/src/: lib.rs
samplecli/: Cargo.toml  Makefile
samplecli/src/: main.rs
todo/: .gitignore  Cargo.toml  Dockerfile  Makefile  ddl.sql
todo/src/: main.rs
todo/templates/: index.html
