[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
askama = "0.11.1"
thiserror = "1.0.38"
rusqlite = { version = "0.28", features=["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
